[build-system]
requires = ["setuptools>=69", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-webapi"
authors = [
    {name = "TheOwlKun"},
]
description = "✨ OpenAI-compatible API proxy powered by Google Gemini"
readme = "README.md"
license = {text = "MIT"}
keywords = ["API", "async", "Gemini", "OpenAI", "Google", "Generative AI", "LLM", "Proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "curl-cffi~=0.15.0",
    "loguru~=0.7.3",
    "orjson~=3.11.7",
    "pydantic~=2.12.5",
]
dynamic = ["version"]

[project.optional-dependencies]
browser = ["browser-cookie3"]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
]

[project.urls]
Repository = "https://github.com/TheOwlKun/Gemini-web2Api"
Issues = "https://github.com/TheOwlKun/Gemini-web2Api/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
